# starkware-starknet-utils

./: .gitignore  .tool-versions  README.md  Scarb.toml
.github/workflows/: on-merge.yaml  on-pull-request.yaml  prepare-release.yml  prepare-testing-release.yml  publish-testing.yml  publish.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/audit/: README.md
python/: pyproject.toml
python/test_utils/: __init__.py  conftest.py  fixtures.py  starknet_test_utils.py
python/tests/: test_role_discovery.py
python/utils/: dune_utils.py  requirements.txt  role_discovery.py  starkli_utils.py  starknet_py_utils.py  utils.py
src/: bit_set.cairo  constants.cairo  iterable_map.cairo  lib.cairo  message_hash.cairo  span_utils.cairo  test_utils.cairo  types.cairo  utils.cairo
src/components/deposit/: deposit.cairo  errors.cairo  interface.cairo
src/components/nonce/: mock_contract.cairo  nonce.cairo  test.cairo
src/components/pausable/: pausable.cairo
src/components/replaceability/: eic_test_contract.cairo  errors.cairo  interface.cairo  mock.cairo  replaceability.cairo  test.cairo  test_utils.cairo
src/components/request_approvals/: interface.cairo  request_approvals.cairo
src/components/roles/: errors.cairo  event_test_utils.cairo  mock_contract.cairo  roles.cairo  test.cairo  test_utils.cairo
src/interfaces/: mintable_token.cairo
src/math/: fraction.cairo  utils.cairo
src/tests/: test_iterable_map.cairo  test_message_hash.cairo
src/trace/: errors.cairo  mock.cairo  test.cairo  trace.cairo
src/types/time/: errors.cairo  time.cairo
